Mockito tests for Service.createProduct method added.