@@ -7,7 +7,7 @@
   <properties>
 	  <spring.version>5.3.9</spring.version>
 	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <java.version>17</java.version>
+      <java.version>16</java.version>
   </properties>
   
   <dependencies>
@@ -55,6 +55,27 @@
 	    <version>3.28.0-GA</version>
 	</dependency>
 
+	<dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-core</artifactId>
+	    <version>3.12.4</version>
+	    <scope>test</scope>
+	</dependency>
+
+	<dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-inline</artifactId>
+	    <version>3.12.4</version>
+	    <scope>test</scope>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-junit-jupiter</artifactId>
+	    <version>3.12.4</version>
+	    <scope>test</scope>
+	</dependency>
+
   </dependencies>
 
   <build>
@@ -65,7 +86,6 @@
 			  <version>3.8.1</version>
 			  <configuration>
 				<release>${java.version}</release>
-                <compilerArgs>--enable-preview</compilerArgs>
 			  	<source>${java.version}</source>
 			  	<target>${java.version}</target>
 	           </configuration>
